Aligned text, removed horizontal scroll, fixed issue with languages

--- a/client/src/app/site/pages/meetings/pages/participants/pages/mandate-check/components/mandate-check-list/mandate-check-list.component.scss
+++ b/client/src/app/site/pages/meetings/pages/participants/pages/mandate-check/components/mandate-check-list/mandate-check-list.component.scss
@@ -67,7 +67,7 @@ mat-progress-bar * {
     }
 }
 
-.gender-map-grid1 {
+.map-grid {
     max-width: inherit;
     display: grid;
     gap: 10px;
